--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 :root{
+    --color-black: #000;
+    --color-primary: #34547a;
+    --color-secondary: #727272;
+
     --font-family: 'Roboto', sans-serif;
     --font-size: 16px;
     --font-weight: 400;
@@ -7,6 +11,12 @@
     --line-height-sm: 1.4;
 
     --container-primary: 1110px;
+    --container-secondary: 540px;
+
+    --gap: 20px;
+    --gap-sm: calc(var(--gap) * 0.5);
+    --gap-md: calc(var(--gap) * 1.5);
+    --gap-lg: calc(var(--gap) * 2);
 }
 
 *   {
@@ -35,7 +45,100 @@ h2 {
     line-height: var(--line-height-sm);
 }
 
+a{
+    color: var(--color-black);
+    text-decoration: none;
+
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .container {
     width: min(100% - 40px, var(--container-primary));
     margin-inline: auto;
+}
+
+.container-sm {
+    width: min(100% - 40px, var(--container-secondary));
+    margin-inline: auto;
+}
+
+.header{
+    background-color: lightgrey;
+    padding-top: 80px;
+}
+.navbar{
+    display: flex;
+}
+
+.navbar-link{
+    padding: 10px;
+}
+
+.navbar-link--active{
+    color: var(--color-primary);
+    font-weight: 500;
+}
+
+.hero{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: var(--container-primary);
+}
+
+.hero-title{
+    margin-bottom: 65px;
+    margin-top: 0
+;
+}
+
+.hero-description{
+    margin-bottom: 57px;
+
+}
+
+.hero-button{
+    display: flex;
+    justify-content: center;
+    min-width: 225px;
+    min-height: 65px;
+    text-transform: uppercase;
+    padding: 0.5em;
+    background-color: var(--color-primary);
+}
+
+.section-title {
+    margin-bottom: 36px;
+}
+
+.section-description {
+    margin-bottom: 57px;
+}
+
+.footer-title {
+    font-size: 1.3125rem;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.footer-description {
+    margin-bottom: 57px;
 }
