--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 :root{
     --color-black: #000;
+    --color-gray-light: #edeef0;
+    --color-white: #fff;
     --color-primary: #34547a;
     --color-secondary: #727272;
 
     --font-family: 'Roboto', sans-serif;
     --font-size: 16px;
     --font-weight: 400;
+
+    --letter-spacing: 0.1em;
 
     --line-height: 1.64;
     --line-height-sm: 1.4;
@@ -14,9 +18,9 @@
     --container-secondary: 540px;
 
     --gap: 20px;
-    --gap-sm: calc(var(--gap) * 0.5);
-    --gap-md: calc(var(--gap) * 1.5);
-    --gap-lg: calc(var(--gap) * 2);
+    --gap-sm: calc(var(--gap) * 0.5); /* 10px */
+    --gap-lg: calc(var(--gap) * 1.5); /* 30px */
+    --gap-xl: calc(var(--gap) * 2);   /* 40px   */
 }
 
 *   {
@@ -27,8 +31,8 @@
 }
 
 html {
+    font-family: var(--font-family), sans-serif;
     font-size: var(--font-size);
-    font-family: var(--font-family);
     font-weight: var(--font-weight);
     line-height: var(--line-height);
 }
@@ -48,7 +52,6 @@ h2 {
 a{
     color: var(--color-black);
     text-decoration: none;
-
 }
 
 img{
@@ -66,33 +69,45 @@ img{
     border: 0;
     padding: 0;
     clip: rect(0 0 0 0);
-    clip-path: inset(50%);
+    clip-path: inset(100%);
     margin: -1px;
+    visibility: hidden;
 }
 
 .container {
-    width: min(100% - 40px, var(--container-primary));
+    width: min(100% - var(--gap-xl), var(--container-primary));
     margin-inline: auto;
 }
 
 .container-sm {
-    width: min(100% - 40px, var(--container-secondary));
+    width: min(100% - var(--gap-xl), var(--container-secondary));
     margin-inline: auto;
 }
 
 .header{
-    background-color: lightgrey;
-    padding-top: 80px;
+    background-color: var(--color-gray-light);
+    padding-top: 69px;
+    padding-bottom: 140px;
 }
 .navbar{
+    margin-bottom: 141px;
+}
+
+.navbar_list{
     display: flex;
+    flex-wrap: wrap;
+    gap: 27px;
+    margin-left: -0.75em;
 }
 
-.navbar-link{
-    padding: 10px;
+.navbar_link{
+    display: block;
+    letter-spacing: var(--letter-spacing);
+    padding: 0.5em 0.75em;
+    text-transform: uppercase;
 }
 
-.navbar-link--active{
+.navbar_link--active{
     color: var(--color-primary);
     font-weight: 500;
 }
@@ -101,28 +116,82 @@ img{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: var(--container-primary);
+    max-width: var(--container-secondary);
 }
 
 .hero-title{
-    margin-bottom: 65px;
-    margin-top: 0
-;
+    margin-top: 0;
+    margin-bottom: 40px;
 }
 
 .hero-description{
     margin-bottom: 57px;
-
+    color: var(--color-secondary);
 }
 
 .hero-button{
     display: flex;
     justify-content: center;
+    align-items: center;
     min-width: 225px;
     min-height: 65px;
     text-transform: uppercase;
     padding: 0.5em;
+    letter-spacing: var(--letter-spacing);
     background-color: var(--color-primary);
+    color: var(--color-white);
+}
+
+.section{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+.section-title{
+    margin-bottom: 36px;
+}
+.section-description{
+    color: var(--color-secondary);
+}
+
+.experience{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+}
+
+.experience_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: var(--gap-xl);
+}
+.experience_item{
+    display: flex;
+    gap: var(--gap);
+    align-items: center;
+    min-width: fit-content;
+}
+
+.experience_item-picture{
+    order: -1;
+}
+.experience_item-image{
+    display: block;
+}
+
+.experience_item-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    line-height: 1;
+
+}
+
+.experience_item-number{
+    font-size: 1.3125rem;
+    font-weight: 500;
 }
 
 .section-title {
@@ -132,6 +201,33 @@ img{
 .section-description {
     margin-bottom: 57px;
 }
+.process{
+    background-color: var(--color-gray-light);
+    padding-bottom: 57px;
+}
+.video{
+    background-color: var(--color-gray-light);
+}
+.video_title{
+
+}
+
+.video_iframe{
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+    border: 0;
+    min-height: 200px;
+}
+
+
+.footer{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+}
 
 .footer-title {
     font-size: 1.3125rem;
@@ -140,5 +236,6 @@ img{
 }
 
 .footer-description {
+    font-size: 0.8125rem;
     margin-bottom: 57px;
 }
