--- a/css/style.css
+++ b/css/style.css
@@ -207,19 +207,17 @@ img{
 }
 .video{
     background-color: var(--color-gray-light);
-}
-.video_title{
-
+    padding-bottom: 100px;
 }
 
 .video_iframe{
+    display: block;
     width: 100%;
     height: auto;
     aspect-ratio: 16/9;
     border: 0;
     min-height: 200px;
 }
-
 
 .footer{
     padding-top: 50px;
@@ -232,7 +230,7 @@ img{
 .footer-title {
     font-size: 1.3125rem;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .footer-description {
