--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,192 @@ img{
     font-size: 0.8125rem;
     margin-bottom: 57px;
 }
+
+/* Add these media query rules at the end of your existing CSS file */
+
+@media screen and (max-width: 1200px) {
+    :root {
+        --container-primary: 900px;
+        --container-secondary: 450px;
+    }
+
+    .experience__container {
+        justify-content: center;
+        gap: var(--gap-xl) var(--gap-lg);
+    }
+}
+
+@media screen and (max-width: 992px) {
+    :root {
+        --container-primary: 720px;
+        --container-secondary: 400px;
+    }
+
+    .header {
+        padding-top: 40px;
+        padding-bottom: 80px;
+    }
+
+    .navbar {
+        margin-bottom: 80px;
+    }
+
+    .navbar__list {
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .hero {
+        align-items: center;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    :root {
+        --container-primary: 540px;
+        --container-secondary: 100%;
+        --font-size: 14px;
+    }
+
+    .header {
+        padding-top: 30px;
+        padding-bottom: 60px;
+    }
+
+    .navbar {
+        margin-bottom: 60px;
+    }
+
+    .navbar__list {
+        gap: 15px 20px;
+    }
+
+    .navbar__link {
+        padding: 0.35em 0.5em;
+    }
+
+    .hero__title {
+        margin-bottom: 30px;
+    }
+
+    .hero__description {
+        margin-bottom: 40px;
+    }
+
+    .hero__button {
+        min-width: 200px;
+        min-height: 55px;
+    }
+
+    .experience__container {
+        gap: var(--gap-lg);
+    }
+
+    .experience__item {
+        flex: 0 0 calc(50% - var(--gap-lg));
+    }
+
+    .section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .footer {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    :root {
+        --gap: 15px;
+    }
+
+    .container, .container-sm {
+        width: calc(100% - var(--gap-lg));
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .navbar__list {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .hero__button {
+        min-width: 180px;
+        min-height: 50px;
+        width: 100%;
+    }
+
+    .experience__container {
+        gap: var(--gap);
+    }
+
+    .experience__item {
+        flex: 0 0 100%;
+        justify-content: center;
+    }
+
+    .footer__description {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    :root {
+        --font-size: 13px;
+    }
+
+    .container, .container-sm {
+        width: calc(100% - var(--gap));
+    }
+
+    .header {
+        padding-top: 20px;
+        padding-bottom: 40px;
+    }
+
+    .navbar {
+        margin-bottom: 40px;
+    }
+
+    .hero__title {
+        margin-bottom: 20px;
+    }
+
+    .hero__description {
+        margin-bottom: 30px;
+    }
+
+    .section {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .experience__item {
+        gap: var(--gap-sm);
+    }
+}
